--- a/DockerFile
+++ b/DockerFile
@@ -14,11 +14,14 @@ RUN apt-get update && apt-get install -y \
 # Copy necessary files for package installation
 COPY requirements.txt .
 COPY setup.py .
+COPY README.md .
 COPY src ./src
 
+# Upgrade pip first
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
+
 # Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy rest of application code
 COPY . .
