--- a/DockerFile
+++ b/DockerFile
@@ -8,23 +8,25 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
-    git \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy necessary files for package installation
-COPY requirements.txt .
-COPY setup.py .
-COPY README.md .
-COPY src ./src
-
-# Upgrade pip first
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy rest of application code
+# Copy application code
 COPY . .
+
+# Upgrade pip and install dependencies
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir pandas && \
+    pip install --no-cache-dir numpy && \
+    pip install --no-cache-dir scikit-learn && \
+    pip install --no-cache-dir matplotlib && \
+    pip install --no-cache-dir python-box==6.0.2 && \
+    pip install --no-cache-dir pyYAML && \
+    pip install --no-cache-dir tqdm && \
+    pip install --no-cache-dir ensure==1.0.2 && \
+    pip install --no-cache-dir joblib && \
+    pip install --no-cache-dir Flask && \
+    pip install --no-cache-dir Flask-Cors
 
 # Create necessary directories
 RUN mkdir -p artifacts/data_ingestion \
