--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -70,48 +70,50 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-  continuous-deployment:
-    name: Continuous Deployment
-    needs: build-and-push-ecr-image
-    runs-on: self-hosted
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Pull latest images
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-        run: |
-          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest || echo "Image not found, will be created on first run"
-
-      - name: Stop and remove old container
-        run: |
-          docker stop wine-quality-app || true
-          docker rm wine-quality-app || true
-
-      - name: Run Docker Image to serve users
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-        run: |
-          docker run -d -p 8080:8080 --name wine-quality-app \
-            -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' \
-            -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' \
-            -e 'AWS_REGION=${{ secrets.AWS_REGION }}' \
-            $ECR_REGISTRY/$ECR_REPOSITORY:latest
-
-      - name: Clean previous images and containers
-        run: |
-          docker system prune -f
+  # Deployment disabled - deploy manually on EC2 until self-hosted runner is configured
+  # continuous-deployment:
+  #   name: Continuous Deployment
+  #   needs: build-and-push-ecr-image
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #
+  #     - name: Configure AWS Credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ secrets.AWS_REGION }}
+  #
+  #     - name: Login to Amazon ECR
+  #       id: login-ecr
+  #       uses: aws-actions/amazon-ecr-login@v1
+  #
+  #     - name: Pull latest images
+  #       env:
+  #         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+  #         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+  #       run: |
+  #         docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest || echo "Image not found, will be created on first run"
+  #
+  #     - name: Stop and remove old container
+  #       run: |
+  #         docker stop wine-quality-app || true
+  #         docker rm wine-quality-app || true
+  #
+  #     - name: Run Docker Image to serve users
+  #       env:
+  #         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+  #         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+  #       run: |
+  #         docker run -d -p 8080:8080 --name wine-quality-app \
+  #           -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' \
+  #           -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' \
+  #           -e 'AWS_REGION=${{ secrets.AWS_REGION }}' \
+  #           $ECR_REGISTRY/$ECR_REPOSITORY:latest
+  #
+  #     - name: Clean previous images and containers
+  #       run: |
+  #         docker system prune -f
+          
