Add workflow_dispatch for manual trigger

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths-ignore:
       - 'README.md'
+  workflow_dispatch:  # Allows manual trigger from GitHub Actions tab
 
 permissions:
   id-token: write
